[package]
name = "repo-grove"
version = "0.1.0"
edition = "2021"
authors = ["Richard Keelan"]
description = "A Rust CLI tool for managing a collection of Git repositories."
license = "MIT"
repository = "https://github.com/RKeelan/repo-grove"

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.41", features = ["serde"] }
